TestCases/Errors/Haversine/observations/sst/sum_01_obs.spm
obs r9-c11 0.121538461538462
obs r10-c11 0.084375
obs r7-c12 0.0672916666666667
obs r9-c12 0.111185897435897
obs r7-c13 0.0211936177248677
obs r8-c13 0.0938249559082892
obs r9-c13 0.0757142857142857
obs r8-c14 1e-08
obs r9-c14 0.0282142857142857
obs r10-c14 0.035
obs r6-c15 0.0105
obs r6-c16 0.01125
obs r7-c16 0.013
obs r8-c17 0.0026487332470667
obs r9-c17 0.00800859329242398
obs r8-c18 0.0042664381512359
obs r9-c18 0.00735923742272482
obs r9-c19 0.0101614612465359
obs r10-c19 0.00990151556520924
obs r11-c19 0.0139645849969436
obs r8-c20 0.0198412698412698
obs r9-c20 0.0111706349206349
obs r10-c20 0.0137544547339882
error_value r9-c11 0.2
error_value r10-c11 0.2
error_value r7-c12 0.2
error_value r9-c12 0.2
error_value r7-c13 0.2
error_value r8-c13 0.2
error_value r9-c13 0.2
error_value r8-c14 0.2
error_value r9-c14 0.2
error_value r10-c14 0.2
error_value r6-c15 0.2
error_value r6-c16 0.2
error_value r7-c16 0.2
error_value r8-c17 0.2
error_value r9-c17 0.2
error_value r8-c18 0.2
error_value r9-c18 0.2
error_value r9-c19 0.2
error_value r10-c19 0.2
error_value r11-c19 0.2
error_value r8-c20 0.2
error_value r9-c20 0.2
error_value r10-c20 0.2
